--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
@@ -21,9 +22,17 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.1",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.0"
+    "babel-jest": "^29.2.2",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
+    "vite": "^3.2.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
