--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
     "babel-jest": "^29.2.2",
+    "eslint": "^8.28.0",
+    "eslint-plugin-react": "^7.31.11",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
     "vite": "^3.2.0",
